# slackprop

./: CMakeLists.txt  TODOS.md  exttype.cmake.txt  matlab.cmake.txt  msvc.cmake.txt
cmake/: compiler_settings.cmake.txt
src/: slack_prop.h  slack_prop.kernel.h  slack_prop_theano.h  slp_driver.cpp  slp_kernel.cu  slp_kernel.cuh  slp_kernel.h  slp_mex.cpp  slp_test.cpp  slp_util.cuh  slp_util.h
